--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-magic-motion": "^1.0.9"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
